--- a/checktextlist/src/main/res/layout/check_row.xml
+++ b/checktextlist/src/main/res/layout/check_row.xml
@@ -5,6 +5,7 @@
     android:layout_height="48dp"
     android:gravity="center_vertical"
     android:padding="15dp"
-    android:checkMark="@drawable/check_state_icon" />
+    android:checkMark="@drawable/check_state_icon"
+    android:textColor="@android:color/black"/>
 
 
